# quantum-hack-espoo

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  a.md  b.md  proven_advantage_reframings.md  pyproject.toml  requirements.txt  scenario_generation.md
app/: streamlit_app.py
contagion/: __init__.py  clustering.py  metrics.py  simulator.py  spec.py  toy_networks.py  visualization.py
docs/: architecture.md  architecture.mmd  huang_simulation.md  solution_architecture.md
examples/: run_clustering_layout.py  run_toy_cascade.py
frontend/: README.md  index.html  package-lock.json  package.json
notebooks/: demo.ipynb
progress/: data-foundation.md  entangled-generator.md
research/: README.md
scenario_generation/: __init__.py  cli.py  inspect_generated.py  plots.py  quantum_hybrid.py  validation.py
scripts/: _audit_matched_foil.py  analyze_entity_scenario_vs_hardware.py  analyze_real_cluster_mixture_hw.py  analyze_real_cluster_mixture_stress_hw.py  build_13f_overlap.py  build_dataset.py  build_system_spec.py  compare_generators_huang.py  compare_real_banks_quantum.py  compare_real_institutions_quantum.py  configure_ibm_quantum.py  derive_real_network_clusters.py  derive_real_network_clusters_small.py  export_failure_network.py  export_joint_counts.py  export_results_data.py  export_stress_results_data.py  fetch_crisis_equities.py  plot_hardware_results.py  prepare_crisis_spec.py  run_cluster_mixture.py  run_cluster_mixture_hardware.py  run_demonstration.py  run_huang_2008_demo.py  run_ibm_quantum_large.py  run_ibm_quantum_real.py  run_ibm_quantum_smart10.py  run_ibm_quantum_test.py  run_mvp.py  run_qae_tail_risk.py  run_qgan_hardware.py  (+5 more)
(+203 files in other folders)
