[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-systemic-risk"
version = "0.1.0"
description = "Quantum-native scenario generation and classical contagion evaluation for systemic financial stress testing."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.8",
    "networkx>=3.2",
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.11",
]

[project.optional-dependencies]
app = ["plotly>=5.20", "streamlit>=1.32"]
quantum = ["qiskit>=1.0"]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
