[project]
name = "quantum-systemic-risk"
version = "0.1.0"
description = "Quantum-native scenario generation and classical contagion evaluation for systemic financial stress testing."
readme = "README.md"
authors = [
    { name = "Alex Do", email = "alexxdo2004@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.8",
    "networkx>=3.2",
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.11",
]

[project.optional-dependencies]
app = [
    "streamlit>=1.32",
]
quantum = [
    "qiskit>=2.4",
    "qiskit-aer>=0.17",
    "qiskit-ibm-runtime>=0.46",
]

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "systemic_risk"
module-root = "src"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
